--- a/style.css
+++ b/style.css
@@ -2,79 +2,41 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* background: rgb(247, 247, 247); */
   font-family: cursive;
+  overflow: hidden;
 }
 
 .wrapper {
-  display: grid;
-  grid-template-columns: .28fr 1fr;
-  grid-template-rows: .35fr 1fr;
   height: 100vh;
+  width: 100vw;
 }
-
-.sub_grid_container {
+.grid_wrapper {
   display: grid;
+  grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  justify-content: end;
-  align-content: start;
+  height: 80vh;
+  width: 80vw;
 }
-
-.grid_cell {}
-
-.grid_inhalt {
-  height: 20%;
-  width: 65%;
-  background: #ffa84c;
-  background: linear-gradient(to right, #ffa84c 0%, #ff7b0d 100%);
+.grid_cells {
+  border: 1px solid black;
 }
-
-.options_container {
-  background: #a9e4f7;
-  background: linear-gradient(to bottom, #a9e4f7 0%, #0fb4e7 100%);
-  grid-column: 1/2;
-  grid-row: 1/5;
+.grid_cells:nth-child(1) {
+  grid-column: 1/3;
 }
-
-header {
-  grid-column: 2/7;
-  grid-row: 1/2;
-  text-align: center;
+.grid_cells:nth-child(2) {
+  grid-column: 3/5;
 }
-
-.template_rows {
-  margin-left: 7%;
+.grid_cells:nth-child(3) {
+  grid-column: 2/4;
 }
-
-.template_rows input,
-p {
-  display: inline-block;
+.grid_cells:nth-child(4) {
+  grid-column: 1/3;
 }
-
-.template_rows input {
-  margin: 0 25px;
-  vertical-align: middle;
+.grid_cells:nth-child(5) {
+  grid-column: 3/5;
+  grid-row: 3/6;
 }
-
-.template_columns {
-  margin-left: 7%;
-}
-
-.template_columns input,
-p {
-  display: inline-block;
-}
-
-.template_columns input[type="range"] {
-  margin: 0 25px;
-  vertical-align: middle;
-}
-
-.grid_gap .grid_gap_rows input {
-  width: 13%;
-}
-
-.grid_gap .grid_gap_columns input {
-  width: 13%;
+.grid_cells:nth-child(6) {
+  grid-column: 1/3;
+  grid-row: 5/9;
 }
