--- a/style.css
+++ b/style.css
@@ -9,34 +9,19 @@ body {
 .wrapper {
   height: 100vh;
   width: 100vw;
+  position: relative;
 }
 .grid_wrapper {
   display: grid;
-  grid-template-rows: repeat(6, 1fr);
-  grid-template-columns: repeat(4, 1fr);
-  height: 80vh;
-  width: 80vw;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2px 2px;
+  height: 100vh;
+  width: 70vw;
+  position: absolute;
+  right: 0;
 }
-.grid_cells {
-  border: 1px solid black;
-}
-.grid_cells:nth-child(1) {
-  grid-column: 1/3;
-}
-.grid_cells:nth-child(2) {
-  grid-column: 3/5;
-}
-.grid_cells:nth-child(3) {
-  grid-column: 2/4;
-}
-.grid_cells:nth-child(4) {
-  grid-column: 1/3;
-}
-.grid_cells:nth-child(5) {
-  grid-column: 3/5;
-  grid-row: 3/6;
-}
-.grid_cells:nth-child(6) {
-  grid-column: 1/3;
-  grid-row: 5/9;
+.grid_cell {
+  background: blanchedalmond;
+  grid-gap: 1px 1px;
 }
