--- a/style.css
+++ b/style.css
@@ -1,27 +1,124 @@
+* {
+  box-sizing: content-box;
+}
 body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: cursive;
-  overflow: hidden;
+  font-family: "Whitney SSm A", "Whitney SSm B", "Lato", "Lucida Grande",
+    "Lucida Sans Unicode", Tahoma, Sans-Serif;
+  font-size: 0.95em;
+  font-variant: small-caps;
+  font-weight: 400;
+  color: #0e1500;
+  overflow-x: hidden;
+  line-height: 1;
 }
 
 .wrapper {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   position: relative;
 }
 .grid_wrapper {
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2px 2px;
+  grid-template-rows: 38vh 38vh;
+  grid-template-columns: 28vw 28vw;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
   height: 100vh;
   width: 70vw;
   position: absolute;
   right: 0;
 }
 .grid_cell {
-  background: blanchedalmond;
-  grid-gap: 1px 1px;
+  background: linear-gradient(to right, #ff839f 0%, #ff6aa8 100%);
+  width: 25vw;
+  height: 25vh;
+}
+.options_container {
+  background: linear-gradient(to bottom, #838dff 0%, #6affc1 100%);
+  width: 30vw;
+  height: 100%;
+  text-align: center;
+  padding: 3.55% 0;
+}
+hr {
+  background: #61484e;
+  width: 75%;
+  height: 1px;
+  border-radius: 50%;
+  border-style: none;
+  margin-top: 7%;
+}
+.options_container h4 {
+  display: inline-block;
+  margin-right: 10%;
+}
+.options_container select {
+  width: 7vw;
+  padding: 1.2%;
+  border: none;
+  border-radius: 5%;
+  font-family: cursive;
+}
+.grid_template {
+  padding-top: 5%;
+}
+.grid_template h4 {
+  margin: 0;
+}
+.grid_gap input[type="number"] {
+  width: 3vw;
+  padding: 1.2%;
+  border: none;
+  border-radius: 10%;
+}
+.grid_gap h4 {
+  margin-bottom: 0;
+  margin-right: 0;
+}
+.grid_gap p {
+  display: inline-block;
+  padding: 3%;
+}
+.grid_gap_container {
+  margin: 0 auto;
+}
+.align_items select {
+  margin-left: 2.5%;
+}
+.justify_content select {
+  margin-left: -4%;
+}
+.align_content select {
+  margin-left: -1.5%;
+}
+.grid_visualisation {
+  position: absolute;
+  top: 12vh;
+  left: 37vw;
+  height: 76vh;
+  width: 56vw;
+  outline: 0.5px dashed black;
+}
+
+@media screen and (max-width: 890px) {
+  body {
+    font-size: 0.8em;
+  }
+  .grid_gap_container p {
+    display: block;
+    text-align: center;
+    margin-left: -2vw;
+  }
+  .options_container h4 {
+    display: block;
+  }
+  .options_container .grid_gap input {
+    width: 6vw;
+  }
+  .options_container select {
+    width: 15vw;
+  }
 }
